# rpm-versiontracker

./: .gitignore  README.md  README.rst  local_settings.py  requirements.txt  run.py  setup.cfg  setup.py  test-requirements.txt  tox.ini  versiontracker.py
docs/: api.rst  conf.py  configuring.rst  index.rst  installing.rst  running.rst
lib/: settings.py  utils.py
templates/: compare.html  packages.html
versiontracker/: controller.py  local_settings.py  settings.py  utils.py
versiontracker/api/: packages.py  repositories.py  settings.py  tags.py
versiontracker/templates/: compare.html  details.html  home.html  layout.html  packages.html
versiontracker/tests/: fakes.py
versiontracker/tests/api/: test-packages.py
