[metadata]
name = rpm-versiontracker
summary = A web application to track differences across RPM repositories
description-file =
    README.rst
author = David Moreau Simard
author-email = dms@redhat.com
home-page = https://github.com/dmsimard/rpm-versiontracker
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Programming Language :: Python :: 2.7
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    versiontracker
scripts =
    bin/versiontracker

[build_sphinx]
source-dir = docs
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/html

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True